输出日志修改

--- a/step5.html
+++ b/step5.html
@@ -1546,7 +1546,7 @@
             	var zLine = rotateAxisByYLine(ZLine,rotateNum);
             	var xLineAd = rotateAxisByYLine(XLineAd,rotateNum);
             	normalize = zLine;
-            	console.log(rotateNum);
+            	console.log(cube2);
             	rotateMove(cube2,xLineAd,next);
             }
             function u(rotateNum,next){
@@ -1556,7 +1556,7 @@
             	var xLine = rotateAxisByYLine(XLine,rotateNum);
             	var zLineAd = rotateAxisByYLine(ZLineAd,rotateNum);
             	normalize = xLine;
-            	console.log(rotateNum);
+            	console.log(cube2);
             	rotateMove(cube2,zLineAd,next);
             }
             function F(rotateNum,next){
@@ -1566,7 +1566,7 @@
             	var xLine = rotateAxisByYLine(XLine,rotateNum);
             	var yLineAd = rotateAxisByYLine(YLineAd,rotateNum);
             	normalize = xLine;
-            	console.log(rotateNum);
+            	console.log(cube2);
             	rotateMove(cube2,yLineAd,next);
             }
             function f(rotateNum,next){
@@ -1576,7 +1576,7 @@
             	var yLine = rotateAxisByYLine(YLine,rotateNum);
             	var xLineAd = rotateAxisByYLine(XLineAd,rotateNum);
             	normalize = yLine;
-            	console.log(rotateNum);
+            	console.log(cube2);
             	rotateMove(cube2,xLineAd,next)
             }
             function L(rotateNum,next){
@@ -1586,7 +1586,7 @@
             	var zLine = rotateAxisByYLine(ZLine,rotateNum);
             	var yLineAd = rotateAxisByYLine(YLineAd,rotateNum);
             	normalize = zLine;
-            	console.log(rotateNum);
+            	console.log(cube0);
             	rotateMove(cube0,yLineAd,next);
             }
             function l(rotateNum,next){
@@ -1596,7 +1596,7 @@
             	var yLine = rotateAxisByYLine(YLine,rotateNum);
             	var zLineAd = rotateAxisByYLine(ZLineAd,rotateNum);
             	normalize = yLine;
-            	console.log(rotateNum);
+            	console.log(cube0);
             	rotateMove(cube0,zLineAd,next);
             }
             function D(rotateNum,next){
@@ -1606,7 +1606,7 @@
             	var xLine = rotateAxisByYLine(XLine,rotateNum);
             	var zLineAd = rotateAxisByYLine(ZLineAd,rotateNum);
             	normalize = xLine;
-            	console.log(rotateNum);
+            	console.log(cube8);
             	rotateMove(cube8,zLineAd,next);
             }
             function d(rotateNum,next){
@@ -1616,7 +1616,7 @@
             	var zLine = rotateAxisByYLine(ZLine,rotateNum);
             	var xLineAd = rotateAxisByYLine(XLineAd,rotateNum);
             	normalize = zLine;
-            	console.log(rotateNum);
+            	console.log(cube8);
             	rotateMove(cube8,xLineAd,next);
             }
             function R(rotateNum,next){
@@ -1626,7 +1626,7 @@
             	var yLine = rotateAxisByYLine(YLine,rotateNum);
             	var zLineAd = rotateAxisByYLine(ZLineAd,rotateNum);
             	normalize = yLine;
-            	console.log(rotateNum);
+            	console.log(cube2);
             	rotateMove(cube2,zLineAd,next);
             }
             function r(rotateNum,next){
@@ -1636,7 +1636,7 @@
             	var zLine = rotateAxisByYLine(ZLine,rotateNum);
             	var yLineAd = rotateAxisByYLine(YLineAd,rotateNum);
             	normalize = zLine;
-            	console.log(rotateNum);
+            	console.log(cube2);
             	rotateMove(cube2,yLineAd,next);
             }
             function B(rotateNum,next){
@@ -1646,7 +1646,7 @@
                 var xLine = rotateAxisByYLine(XLine,rotateNum);
                 var yLine = rotateAxisByYLine(YLine,rotateNum);
                 normalize = xLine;
-                console.log(rotateNum);
+                console.log(cube20);
                 rotateMove(cube20,yLine,next);
             }
             function b(rotateNum,next){
@@ -1656,7 +1656,7 @@
                 var xLine = rotateAxisByYLine(XLine,rotateNum);
                 var yLineAd = rotateAxisByYLine(YLineAd,rotateNum);
                 normalize = xLine;
-                console.log(rotateNum);
+                console.log(cube20);
                 rotateMove(cube20,yLineAd,next);
             }
             /**
